--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d59639
+	base = 7dfc907
 	trimbase = 
 	parent = release/kinetic/rospy_wrapper
-	previous = 
+	previous = 3d59639
