--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f73522d
+	base = 99dbef9
 	trimbase = 
 	parent = debian/kinetic/rospy_wrapper
-	previous = 
+	previous = f73522d
